--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.9.2",
     "@astrojs/check": "^0.7.0",
+    "@astrojs/node": "^8.2.5",
+    "astro": "^4.9.2",
+    "canvas": "^2.11.2",
     "typescript": "^5.4.5"
   }
 }
