--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "server": "node dist/entry.mjs"
+    "server": "node dist/server/entry.mjs"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
